# YARR

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
YARR/: CMakeLists.txt  YARR.cpp
YARR/App/: app.cpp  app.hpp  exceptions.hpp
YARR/Renderer/: image.cpp  image.hpp  renderer.cpp  renderer.hpp
